zordon/deploy/whatsapp-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-consumer
  namespace: remedios
  labels:
    app: whatsapp-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsapp-consumer
  template:
    metadata:
      labels:
        app: whatsapp-consumer
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
      - name: whatsapp-consumer
        image: ghcr.io/borisfaj/remedios-consumer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
