zordon/deploy/audio_whispercpp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper-cpp
  namespace: remedios
  labels:
    app: whisper-cpp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisper-cpp
  template:
    metadata:
      labels:
        app: whisper-cpp
    spec:
      imagePullSecrets:
      - name: ghcr-creds
      containers:
      - name: whisper-cpp
        image: ghcr.io/borisfaj/whisper-cpp:arm64-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        - containerPort: 9000
        resources:
          requests:
            cpu: "500m"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "4Gi"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - whisper-turbo
            topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        kubernetes.io/arch: arm64
---
apiVersion: v1
kind: Service
metadata:
  name: whisper-cpp
  namespace: remedios
spec:
  selector:
    app: whisper-cpp
  ports:
  - name: http
    port: 8001
    targetPort: 8001
  - name: whisper
    port: 9000
    targetPort: 9000
