zordon/deploy/remetext.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remetext
  namespace: remedios
  labels:
    app: remetext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remetext
  template:
    metadata:
      labels:
        app: remetext
    spec:
      imagePullSecrets:
      - name: ghcr-creds
      containers:
      - name: remetext
        image: ghcr.io/borisfaj/remetext:latest
        imagePullPolicy: Always
        command: ["/app/remedios/.venv/bin/python", "-m", "remetext_service"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: remetext
  namespace: remedios
spec:
  selector:
    app: remetext
  ports:
  - port: 8000
    targetPort: 8000
